# clic_campus

./: README.md  pyproject.toml  requirements.txt
src/: debug.py  home.py  ids  main.py
src/pages/: jobs.py  match.py  vocab.py
src/pages/utils/: Db.py  Scrapper.py  __init__.py
